started work on the post controller, created a create and an update route
