# apps/api/src/controllers/auth/auth.controller.ts
@@ -1,7 +1,8 @@
 import { Body, Controller, HttpCode, HttpStatus, Post } from "@nestjs/common";
 import { LoginBody } from "../../contracts/login.body";
 import { login } from "./handlers/login.handler";
-import { ApiOperation } from "@nestjs/swagger";
+import { ApiOperation, ApiResponse} from "@nestjs/swagger";
+import { AccessToken } from "../../contracts/access.token.view";
 
 
 @Controller("auth")
@@ -9,6 +10,11 @@ export class AuthController {
     @Post("login")
     @HttpCode(HttpStatus.OK)
     @ApiOperation({summary: "Login using credentials", operationId: "login"})
+    @ApiResponse({
+        status: 201,
+        description: "User created successfully",
+        type: AccessToken
+    })
     async login(@Body() body: LoginBody){
         return login(body)
     }
