# apps/api/src/controllers/auth/handlers/login.handler.ts
@@ -1,16 +1,23 @@
 import { NotFoundException, UnauthorizedException } from "@nestjs/common";
 import { AccessToken } from "../../../contracts/access.token.view";
 import { LoginBody } from "../../../contracts/login.body";
-import { UserStore } from "../../users/handlers/user.store";
 import jwt from "jsonwebtoken"
 import config from "../../../config";
+import { prisma } from "../../../lib/prisma";
+import bcrypt from "bcryptjs";
 
-export const login = (body: LoginBody) : AccessToken => {
-    const user = UserStore.getByEmail(body.email)
+export const login = async (body: LoginBody) : Promise<AccessToken> => {
+    const user = await prisma.user.findUnique({
+        where: {
+            email: body.email
+        }
+    })
     if (!user) {
         throw new NotFoundException("User does not exist")
     }
-    if (user.password === body.password) {
+    const isMatch = await bcrypt.compare(body.password, user.password)
+
+    if (isMatch) {
         const token = jwt.sign({
             id: user.id,
             email: user.email,
